deploy/api-deploy/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mo-api-deployment
  namespace: middleoffice
  labels:
    app: mo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mo-api
  template:
    metadata:
      labels:
        app: mo-api
    spec:
      containers:
      - name: mo-apirequest
        image: jpgouigoux/mo-apirequest
        ports:
        - containerPort: 81
          name: http81
      - name: mo-apirequesttype
        image: jpgouigoux/mo-apirequesttype
        ports:
        - containerPort: 80
          name: http
      - name: mo-apivote
        image: jpgouigoux/mo-apivote
        ports:
        - containerPort: 82
          name: http82
